--- a/scss/components/_two-columns.scss
+++ b/scss/components/_two-columns.scss
@@ -4,7 +4,7 @@
 	height: 50rem;
 
 	&__left {
-		width: 40rem;
+		width: 45rem;
 		height: 30rem;
 		position: absolute;
 		top: 4rem;
@@ -41,7 +41,7 @@
 
 	&__right {
 		z-index: 1;
-		width: 40rem;
+		width: 45rem;
 		height: 30rem;
 		position: absolute;
 		right: 2rem;
@@ -121,6 +121,15 @@
 					transform: translate(-50%);
 				}
 			}
+		}
+	}
+}
+
+@media screen and (max-width: 1600px) {
+	.two-columns {
+		&__left,
+		&__right {
+			width: 40rem;
 		}
 	}
 }
